automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,7 @@
    ],
    "source": [
     "#!pip install scipy\n",
-    "!pip install statsmodels\n",
+    "#!pip install statsmodels\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
